# patchwaste

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  SUPPORT.md  TRADEMARK.md
.githooks/: pre-commit
.github/: release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  commercial-interest.yml  open-core-feature.yml  usage-report.yml
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: cli_behaviors.rs  cli_behaviours.rs
crates/core/: Cargo.toml
crates/core/src/: baseline.rs  config.rs  lib.rs  report.rs  rules.rs  types.rs
crates/core/src/parser/: mod.rs  steampipe_log.rs
crates/core/tests/: analyse_fixture.rs  analyze_fixture.rs  config.rs  property_tests.rs  steampipe_log.rs
crates/core/tests/snapshots/: analyse_fixture__analyse_fixture_produces_stable_report_json.snap  analyze_fixture__analyze_fixture_produces_stable_report_json.snap
examples/: gitlab-ci.yml
scripts/: bootstrap-dev.sh  verify.sh
