[package]
name = "patchwaste-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
once_cell = "1"
walkdir = "2"

[dev-dependencies]
insta = { version = "1", features = ["json"] }
